[gd_scene load_steps=3 format=2]

[ext_resource path="res://Compiler.gd" type="Script" id=1]
[ext_resource path="res://App.gd" type="Script" id=2]

[node name="Node" type="Node"]

[node name="App" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.105882, 0.0196078, 0.858824, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Compiler" type="Node" parent="App"]
script = ExtResource( 1 )

[node name="Source" type="RichTextLabel" parent="App"]
margin_left = 93.0
margin_top = 39.0
margin_right = 402.0
margin_bottom = 510.0
text = "typedef  float my_int;

my_int my_func(float f){
	int a=1;
	if(a){
		a=2;
	}
	int b;
	print(\"\\tHello Word\");
	return 1.0;
}

my_int g(int x){
 int x=1+(2*0);
int y=1+10-x;
return 0.0;
}

int main(){
	int x=1;
	print(x);
}"

[node name="end" type="TextEdit" parent="App"]
margin_left = 1032.0
margin_top = 9.0
margin_right = 1535.0
margin_bottom = 723.0
text = "[[CALL, main], 
[PUT, 0], [JZ, END], 

[LABEL, my_func], 
	[BEGIN],
		[VAR, f, Floating Point SP],
		[STORE, f], 
	[BEGIN], 
		[VAR, a, Integer],
		[PUT, 1],
		[STORE, a],
		[LOAD, a], [JZ, END_BLOCK1],
			[PUT, 2], [STORE, a],
		[LABEL, END_BLOCK1], 
		[VAR, b, Integer], [PUT, 0], [STORE, b],
		[PUT, 	Hello Word], [CALL, print],

		[PUT, 1.0],
	[END], [END], [RET],

[LABEL, g],
	[BEGIN], 
		[VAR, x, Integer], 
		[STORE, x], 
	[BEGIN], 
		[VAR, x, Integer],
		[PUT, 1], [PUT, 2], [PUT, 0], [SYSCALL, *], [SYSCALL, +], [STORE, x], 
		[VAR, y, Integer],
		[PUT, 1], [PUT, 10], [LOAD, 1], [SYSCALL, -], [SYSCALL, +], [STORE, y], 
		
		[PUT, 0.0],
	[END], [END], [RET],

[LABEL, END]]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Source2" type="RichTextLabel" parent="App"]
margin_left = -440.0
margin_top = 349.0
margin_right = -131.0
margin_bottom = 628.0
text = "typedef  float my_int;

my_int my_func(float f){
	int a;
	int b;
}

my_int test(int i){
	int x=1+i*2;
	print(x);
	print(\"Hello\");
}

void main(){
	test(10);
}"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="result" type="RichTextLabel" parent="App"]
margin_left = 450.0
margin_top = 77.0
margin_right = 773.0
margin_bottom = 495.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VaribleStack" type="ColorRect" parent="App"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -174.0
margin_top = 63.0
margin_right = -38.0
margin_bottom = 259.0
color = Color( 0.105882, 0.0156863, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="App/VaribleStack"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Variable Stack Dislay"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ValueStack" type="ColorRect" parent="App"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -176.0
margin_top = 317.0
margin_right = -40.0
margin_bottom = 513.0
color = Color( 0.105882, 0.0156863, 0.321569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="App/ValueStack"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Values display"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunButton" type="Button" parent="App"]
margin_left = 901.0
margin_top = 560.0
margin_right = 998.0
margin_bottom = 588.0
text = "run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="ColorRect" parent="App"]
anchor_left = 0.139
anchor_top = 0.925
anchor_right = 0.139
anchor_bottom = 0.925
margin_left = -0.336014
margin_top = -6.10352e-05
margin_right = 556.664
margin_bottom = 39.9999
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="App/Display"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "display"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unused" type="RichTextLabel" parent="."]
visible = false
margin_left = 291.0
margin_top = 8.0
margin_right = 503.0
margin_bottom = 48.0
bbcode_enabled = true
bbcode_text = "BBCode [color=red]blue[/color]"
text = "BBCode blue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="App/RunButton" to="App" method="_on_RunButton_pressed"]
